password reset success modal unreadable fix #3

--- a/client/client.css
+++ b/client/client.css
@@ -426,6 +426,10 @@ select {
   height: auto;
 }
 
+.accounts-dialog {
+  background-color: : #ff00c1;
+}
+
 @keyframes flash {
   from {
     color: white;
